--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Users/Mart/workspace/CanaryLib/target/CanaryLib-1.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Mart/.m2/repository/org/apache/logging/log4j/log4j-api/2.0-beta9/log4j-api-2.0-beta9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mart/.m2/repository/net/visualillusionsent/viutils/1.3.0/viutils-1.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
